--- a/packages/fxa-settings/package.json
+++ b/packages/fxa-settings/package.json
@@ -36,6 +36,7 @@
     "@reach/router": "^1.3.4",
     "classnames": "^2.2.6",
     "fxa-auth-client": "workspace:*",
+    "fxa-common-password-list": "^0.0.4",
     "fxa-react": "workspace:*",
     "graphql": "^14.6.0",
     "lodash.groupby": "^4.6.0",
@@ -43,6 +44,7 @@
     "react": "^16.13.1",
     "react-async-hook": "^3.6.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.8.6",
     "react-scripts": "^3.4.1",
     "subscriptions-transport-ws": "^0.9.18",
     "typescript": "3.9.7"
@@ -77,6 +79,7 @@
     "eslint-plugin-jest": "^23.13.2",
     "eslint-plugin-react": "7.19.0",
     "fxa-shared": "workspace:*",
+    "mutationobserver-shim": "^0.3.7",
     "node-sass": "^4.14.0",
     "npm-run-all": "^4.1.5",
     "pm2": "^4.4.1",
